# Clima_Scraper

./: .gitignore  README.md  pyproject.toml
src/clima/: database.py  main.py
